<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:orientation="vertical"
    tools:context="ua.andriyantonov.donorua.activities.RegisterActivity1111"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_bloodgroup"
        android:textSize="25sp"
        android:textColor="@color/main_primary_text"
        android:layout_marginBottom="5dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/reg_bloodType_btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/btn_red_circle"
                android:layout_centerInParent="true"
                android:alpha="0.8"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blood_group_1"
                android:textSize="19sp"
                android:textColor="@color/material_drawer_primary_text"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/reg_bloodType_btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/btn_red_circle"
                android:layout_centerInParent="true"
                android:alpha="0.8"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blood_group_2"
                android:textSize="19sp"
                android:textColor="@color/material_drawer_primary_text"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/reg_bloodType_btn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/btn_red_circle"
                android:layout_centerInParent="true"
                android:alpha="0.8"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blood_group_3"
                android:textSize="19sp"
                android:textColor="@color/material_drawer_primary_text"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/reg_bloodType_btn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/btn_red_circle"
                android:layout_centerInParent="true"
                android:alpha="0.8"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blood_group_4"
                android:textSize="19sp"
                android:textColor="@color/material_drawer_primary_text"
                android:layout_centerInParent="true"/>
        </RelativeLayout>


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_rh_factor"
        android:layout_marginBottom="5dp"
        android:textColor="@color/main_primary_text"
        android:textSize="25sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageButton
                android:layout_marginRight="20dp"
                android:id="@+id/reg_rh_factor_pos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/btn_red_circle"
                android:layout_centerInParent="true"
                android:alpha="0.8"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rh_factor_pos"
                android:textSize="19sp"
                android:textColor="@color/material_drawer_primary_text"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp">
            <ImageButton
                android:id="@+id/reg_rh_factor_neg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/btn_red_circle"
                android:layout_centerInParent="true"
                android:alpha="0.8"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rh_factor_neg"
                android:textSize="19sp"
                android:textColor="@color/material_drawer_primary_text"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="10sp"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/city_textview"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_city"
            android:textColor="@color/main_primary_text"
            android:textSize="25sp"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <AutoCompleteTextView
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/reg_autocomplete_city"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"
                android:singleLine="true"
                android:ems="9"
                android:hint="@string/text_city_enter"
                android:textColorHint="@color/primary_dark_material_light"/>
            <ProgressBar
                android:id="@+id/reg_loadingCities_progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                style="?android:attr/progressBarStyle"
                android:visibility="invisible"/>

        </RelativeLayout>


    </LinearLayout>

    <Button
        android:id="@+id/reg_saveRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_save"/>




</LinearLayout>
